# largeInvoice

./: .env.example  .gitignore  Makefile  README.md  agent.md  architecture.md  claude_code_prompt.md  finance_domain_addendum.md  pyproject.toml
data/input/: metal_options_summary.rtf
data/samples/example_compare_run/: README.md  comparison_report.json  comparison_report.md  document_profile.docling.json  document_profile.pymupdf.json  extraction_dictionary.used.json  extraction_dictionary.used.xlsx  extraction_result.docling.json  extraction_result.docling.md  extraction_result.docling.xlsx  extraction_result.pymupdf.json  extraction_result.pymupdf.md  extraction_result.pymupdf.xlsx  parsed_document.docling.json  run_metadata.json
notebooks/: 01_phase1_cme_reference_demo.ipynb  _build_notebook.py
src/large_pdf_extractor/: __init__.py
src/large_pdf_extractor/app/: __init__.py  config.py  pipeline.py  run_state.py
src/large_pdf_extractor/chunking/: __init__.py  candidate_selector.py  chunker.py  strategies.py
src/large_pdf_extractor/cli/: __init__.py  main.py
src/large_pdf_extractor/comparison/: __init__.py  comparator.py  diff.py
src/large_pdf_extractor/dictionary/: __init__.py  generator.py  loader.py  (+1 more)
tests/: conftest.py
tests/integration/: test_cli_smoke.py  test_compare_mode_fake_llm.py  test_phase1_pipeline_fake_llm.py
tests/unit/: test_candidate_selector.py  test_chunking.py  test_comparator.py  test_dictionary_loader.py  test_excel_writer.py  test_extractor.py  test_fake_provider.py  test_markdown_renderer.py  test_models.py  test_parsers.py
(+30 files in other folders)
